5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1593_2425.log
== TEST (2019-03-26 10:10:50) 
-- CODE:
dt = float(input("dist창ncia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:11:43) 
-- CODE:
dt = float(input("dist창ncia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(cm,3 km/l))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:50) 
-- CODE:
dt = float(input("dist창ncia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:13:47) 
-- CODE:
dt = float(input("dist창ncia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:14:13) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:14:18) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.134351
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:55:45) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:18:01) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.154941
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:33:08) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.197578
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:41:28) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.12231
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:41:35) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.136733
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:28:43) 
-- CODE:
dt = float(input("distancia"))
cg = float(input("combustivel"))
cm = dt/cg
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.138739
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
